#ifndef ISENSOR_H
#define ISENSOR_H


class ISensor {
public:    
    virtual float GetValue() = 0;
};

#endif 

